--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,7 @@
     "jsx-a11y/no-static-element-interactions": 0,
     "no-underscore-dangle": 0,
     "react/prop-types": 0,
-    "react/jsx-filename-extension": 0
+    "react/jsx-filename-extension": 0,
+    "react/jsx-one-expression-per-line": 0
   }
 }
