--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,7 @@
   "parser": "babel-eslint",
   "extends": "airbnb",
   "rules": {
+    "curly": ["error", "all"],
     "jsx-a11y/click-events-have-key-events": 0,
     "jsx-a11y/no-static-element-interactions": 0,
     "no-underscore-dangle": 0,
