--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/node": "^10.5.1",
     "@types/react": "^16.4.6",
     "@types/react-dom": "^16.0.6",
+    "@types/react-infinite-scroller": "^1.0.6",
     "@types/react-redux": "^6.0.3",
     "@types/react-router-dom": "^4.2.7",
     "babel-eslint": "^8.2.5",
