--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react-scripts": "1.1.4",
     "react-scripts-ts": "^2.16.0",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-saga": "^0.16.0"
   },
   "scripts": {
     "start": "react-scripts-ts start",
